2013-05-30  Janus Weil  <janus@gcc.gnu.org>

PR fortran/54189
	* resolve.c (check_assumed_size_reference): Check for e->ref.


2013-05-30  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/54189
	* gfortran.dg/assumed_size_1.f90: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@199445 138bc75d-0d04-0410-961f-82ee72b054a4